<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="66dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="@string/login_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108"
        tools:text="Login" />

    <Button
        android:id="@+id/bt"
        android:layout_width="103dp"
        android:layout_height="59dp"
        android:foregroundGravity="center"
        android:text="@string/signup_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.79" />

    <EditText
        android:id="@+id/username"
        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginTop="184dp"
        android:editable="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="227dp"
        android:layout_height="84dp"
        android:layout_marginTop="36dp"
        android:editable="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="108dp"
        android:foregroundGravity="center"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="166dp"
        android:layout_height="23dp"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="38dp"
        android:gravity="center"
        android:text="@string/dont_have_an_acount"
        app:layout_constraintBottom_toTopOf="@+id/bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>